<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <ImageView
            android:layout_width="215dp"
            android:layout_height="65dp"
            android:contentDescription="@string/txt_img_description"
            android:src="@drawable/hello"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            />

    <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:layout_marginTop="@dimen/input_margin"/>

    <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="text"
            android:layout_marginTop="@dimen/input_margin"/>

    <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/input_margin"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/input_margin"/>

    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/input_margin"/>

    <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="219dp"
            android:layout_height="48dp"
            android:background="@drawable/round_button"
            android:text="@string/sign_in"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="@color/dusty_white"
            />

</LinearLayout>