<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_grey"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:contentDescription="@string/txt_img_description"
            android:src="@drawable/thecheezery"
            android:scaleType="fitXY" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="25dp"
            android:textColor="@color/dusty_white"
            android:fontFamily="sans-serif-light"
            android:text="@string/txt_welcome_title"
            android:textAlignment="center" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/dusty_white"
            android:fontFamily="sans-serif-light"
            android:text="@string/txt_welcome_description"
            android:textAlignment="center"
            android:textStyle="italic"
            android:padding="15dp" />

    <Button
            android:id="@+id/btn_get_started"
            android:layout_width="219dp"
            android:layout_height="48dp"
            android:text="@string/bnt_get_started"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_button"
            android:textColor="@color/dusty_white"
            />
<!--            android:onClick="startOrder" -->


</LinearLayout>